// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adapter test find many 1`] = `
Array [
  Object {
    "firstActive": "2016-11-18T11:25:11.000Z",
    "id": 3,
    "isActive": false,
    "model3s": Array [
      Object {
        "id": 3,
        "model4s": Array [
          Object {
            "id": 3,
            "model5Field": Object {
              "id": 1,
              "name": "model5Name1",
            },
            "name": "model4Name1",
          },
        ],
        "title": "model3Title1",
      },
    ],
    "num": 1001,
  },
]
`;

exports[`Adapter test find one with populates 1`] = `
Object {
  "firstActive": "2016-11-18T11:25:11.000Z",
  "id": 1,
  "isActive": false,
  "model2Field": Object {
    "key": "key1",
    "model3s": Array [
      Object {
        "id": 1,
        "model4s": Array [
          Object {
            "id": 1,
            "name": "model4Name5",
          },
        ],
        "title": "model3Title2",
      },
    ],
    "model4s": Array [
      Object {
        "id": 2,
        "name": "model4Name2",
        "owner": "key1",
      },
    ],
    "name": "model2Name1",
  },
  "model3s": Array [
    Object {
      "id": 2,
      "model4s": Array [],
      "title": "model3Title1",
    },
  ],
  "num": 1,
}
`;

exports[`Adapter test find with null submodel 1`] = `
Object {
  "firstActive": "2016-11-18T11:25:11.000Z",
  "id": 2,
  "isActive": false,
  "model2Field": null,
  "num": 1,
}
`;

exports[`Adapter test findCriteriaWhereToWhere 1`] = `
Object {
  "atrt2": Object {
    "greaterThan": "v2",
  },
  "attr1": Object {
    "contains": "v1",
    "not": Object {
      "contains": "v3",
    },
  },
}
`;
